--- a/vignettes/main_report.Rmd
+++ b/vignettes/main_report.Rmd
@@ -7,7 +7,7 @@ output:
     number_sections: yes
     toc: yes
     toc_depth: 2
-bibliography: /Users/nicholassunderland/git/thesis/bibliography/phd_proposal.bib
+#bibliography: /Users/nicholassunderland/git/thesis/bibliography/phd_proposal.bib
 csl: https://www.zotero.org/styles/nature
 link-citations: true
 reference-section-title: References
